--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Atomic+Age&family=Big+Shoulders+Display:wght@100..900&family=Bungee+Spice&family=Coda:wght@400;800&family=DM+Serif+Display:ital@0;1&family=Fira+Code:wght@300..700&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Overpass:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rowdies:wght@300;400;700&family=Russo+One&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    transition: 1s;
 }
 .main_container{
     display: flex;
+    min-height: 120vh;
+}
+@media(max-width:1093px){
+    .main_container{
+        flex-direction: column;
+    }
 }
