--- a/src/components/__molecules/__paymentCards/Card.css
+++ b/src/components/__molecules/__paymentCards/Card.css
@@ -4,11 +4,81 @@
   display: flex;
   flex-direction: column;
   height: 245px;
+  border-radius: 10px;
 }
 .front_card {
-    background: linear-gradient(164deg, #6348fe 4.74%, #610595 88.83%);
-    position: absolute;
-    left: 164px;
-    padding: 28px 32px 28px 26.5px;
-    border-radius: 10px;
+  background: linear-gradient(164deg, #6348fe 4.74%, #610595 88.83%);
+  padding: 28px 32px 28px 26.5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 1;
+}
+.card_back {
+  background: linear-gradient(169deg, #fff 5%, #d2d3d9 91.69%);
+}
+.card_holder {
+  display: flex;
+  justify-content: space-between;
+}
+.card_info {
+  display: flex;
+  flex-direction: column;
+  gap: 25.5px;
+}
+.card_number {
+  width: 100%;
+}
+.card_number p {
+  color: var(--White, #fff);
+  font-family: "Space Grotesk";
+  font-size: 28px;
+  font-weight: 500;
+  letter-spacing: 3.422px;
+}
+.card_holder p {
+  color: var(--White, #fff);
+  font-family: "Space Grotesk";
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.black_line {
+  width: 100%;
+  height: 54px;
+  background: #2f2f2f;
+  margin: 23px 0;
+}
+.card_safe_code_div {
+  max-width: 361px;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 4px;
+  background: #adb5be;
+  padding: 10px;
+}
+.card_safe_code_div p {
+  color: var(--White, #fff);
+  text-align: right;
+  font-family: "Space Grotesk";
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.card_back svg{
+  margin: 0 auto;
+  margin-top: 33px;
+}
+
+@media(max-width:1093px){
+    .front_card{
+      position: absolute;
+      bottom: -130.8px;
+    }
+    .card_back{
+      position: absolute;
+      top: 15px;
+    }
 }
