--- a/src/components/__organims/__payment/Payment.css
+++ b/src/components/__organims/__payment/Payment.css
@@ -1,15 +1,55 @@
 .payment_main{
-    max-width: 483px;
+    max-width: 705px;
     width: 100%;
-    background: #21092F;
-    min-height: 100vh;
+    display: flex;
+    align-items: center;
+}
+.payment_main_box{
+    width: 100%;
+    height: 100%;
+    padding:0 20px;
+    background-image: url(../../../assets/bg-main-desktop.png);
+    background-size: 483px;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
-.payment_card{
-    position: relative;
-    background: black;
+.payment_cards{
     max-width: 541px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 37px;
+}
+.payment_front_card ,.payment_back_card{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+}
+.payment_back_card{
+    justify-content: flex-end;
+}
+
+
+/* MEDIA */
+
+@media(max-width:1093px){
+    .payment_main{
+        max-width: 1100px;
+        width: 100%;
+        align-items: flex-start;
+    }
+    .payment_main_box{
+        background-image: url(../../../assets/bg-main-mobile.png);
+        background-size: 100%;
+        height: 350px;
+        padding: 32px 20px 51px 20px;
+    }
+    .payment_cards{
+        margin: 0 auto;
+        flex-direction: column-reverse;
+        position: relative;
+        height: 100%;
+    }
 }
